# gyges_game

./: Cargo.toml  Dockerfile.prod  README.md  Trunk.toml  docker-compose.yaml  index.html  todo.md
docker/: Dockerfile
sass/: index.sass
src/: components.rs  constant.rs  helper.rs  main.rs  state.rs
src/components/: app.rs  aside.rs  aside_game_preparing.rs  footer.rs  game.rs  game_info.rs  game_playing.rs  game_preparing.rs  game_won.rs  header.rs  mod.rs  pawn.rs  rules.rs
src/entities/: board.rs
src/stores/: game_state.rs
